tests/errors/init_state/borrow_precondition/shared_borrow_of_never_init.err.expected
error: at 5:5: [INIT-BorrowStateMismatch] In function 'f', block 'entry': cannot create & of 'x': place must be initialized at borrow, but is not yet initialized
   |
 5 |     r = &x;
   |     ^^^^^^
